Fixed regressions in Linux caused by porting to OSX.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,14 @@ IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
 ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
+# linux fixes
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+	#INCLUDE_DIRECTORIES(/Library/Frameworks/SDL.framework/Headers)
+	#FIND_LIBRARY(COCOA_LIBRARY Cocoa)
+	FIND_LIBRARY(SDL_LIBRARY SDL)
+	FIND_LIBRARY(OPENGL_LIBRARY GL)
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+
 # CFLAGS
 ADD_DEFINITIONS(-DDEBUG -O0 -Wall -g3)
 
